test_regress/t/t_var_types_bad.out
%Error: t/t_var_types_bad.v:40:11: Illegal bit or array select; type does not have a bit range, or bad dimension: data type is 'bit'
                                 : ... note: In instance 't'
   40 |     d_bitz[0] = 1'b1;          
      |           ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_var_types_bad.v:41:13: Illegal bit or array select; type does not have a bit range, or bad dimension: data type is 'logic'
                                 : ... note: In instance 't'
   41 |     d_logicz[0] = 1'b1;        
      |             ^
%Error: t/t_var_types_bad.v:42:11: Illegal bit or array select; type does not have a bit range, or bad dimension: data type is 'logic'
                                 : ... note: In instance 't'
   42 |     d_regz[0] = 1'b1;          
      |           ^
%Error: t/t_var_types_bad.v:47:11: Illegal bit or array select; type does not have a bit range, or bad dimension: data type is 'real'
                                 : ... note: In instance 't'
   47 |     d_real[0] = 1'b1;          
      |           ^
%Warning-REALCVT: t/t_var_types_bad.v:47:5: Implicit conversion of real to integer; expected integral input to SEL
                                          : ... note: In instance 't'
   47 |     d_real[0] = 1'b1;          
      |     ^~~~~~
                  ... For warning description see https://verilator.org/warn/REALCVT?v=latest
                  ... Use "/* verilator lint_off REALCVT */" and lint_on around source to disable this message.
%Error: t/t_var_types_bad.v:48:15: Illegal bit or array select; type does not have a bit range, or bad dimension: data type is 'real'
                                 : ... note: In instance 't'
   48 |     d_realtime[0] = 1'b1;      
      |               ^
%Warning-REALCVT: t/t_var_types_bad.v:48:5: Implicit conversion of real to integer; expected integral input to SEL
                                          : ... note: In instance 't'
   48 |     d_realtime[0] = 1'b1;      
      |     ^~~~~~~~~~
%Error: Exiting due to
